# psi4_pybind11_plugin

./: .gitignore  CMakeLists.txt  LICENSE  __init__.py  extras.py  plugin.cc  plugin_prep_options.py  pymodule.py
tests/: conftest.py  test_aci.py
